# bsky-bots

./: README.md  handles.ts  run_handles.sh
credentials_example/: README.md  handles.json  handles.remove.key  handles.session.json
handles/: README.md  compose.yml  index.ts  run.sh
handles-web/: Cargo.toml
handles-web/src/: main.rs
handles/pwsh/: bsky-handle.ps1  check-key.sh  diff.sh  list-bsky-handles.ps1
handles/web/: Cargo.toml  Dockerfile  README.md  run.sh
handles/web/src/: main.rs
nginx/sites-available/: cgi  handles
